2004-02-19  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c, rsvg-styles.h: Changed "opacity groups" into 
	"discrete layers" which are like opacity groups but handle filters
	as well as opacity groups and will eventually handle masks. This fixes 
	bugs relating to transperency and filters being used at the same time.

	* rsvg-filter.c: fixed a couple of little bugs relating to gaussian 
	blurs with a standard deviation less than 1 in an axis, it will now 
	just ommit blurring in this axis, saving us time. Also disabled perfect
	blurs because they are really quite silly most of the time, Dom was 
	right.

2004-02-18  Brian Koebbe  <brian@koebbe.org>

	* rsvg-css.c (rsvg_css_parse_list): fix a loop run amuck (#134801)

2004-02-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* rsvg-gz.c: (rsvg_handle_gz_close_impl):
          catch read error from gsf_input_read
          break from infinite loops that do not manage to write (#134653)

2004-02-16  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Fix bug #134492
	
2004-02-15  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in, rsvg-styles.c: Fix bug #134292
	
2004-02-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Fix bug #133947

2004-02-11  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: added feComposite filter

2004-02-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.[ch]: Implement get_font_size() function
	* rsvg-shapes.c: Use the above fn
	* rsvg-filter.c: Ditto
	
2004-02-06  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: made gassian blur use 3 box blurs (technically 6 motion blurs) when the geometric mean of the standard deviations of the filter is over two. Misc enhancements in feConvolveMatrix
	
2004-02-05  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Made colormatrix a lot safer, added checking to make sure colvolvematrix doesn't segfault, fixed embarrasing little buglet in feOffset.